fixed z-index of loader animation

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -18,6 +18,7 @@ html {
     opacity: 1;
   }
   to {
+    z-index: 0;
     opacity: 0;
   }
 }
@@ -32,8 +33,8 @@ html {
 }
 
 #loader-wrapper {
-  animation: fadeOut 0.5s ease-out 1.5s forwards;
   z-index: 100;
+  animation: fadeOut 0.5s ease-out 1.5s forwards;
 }
 #landing {
   display: block;
